# flood-gate

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  bug-list.txt  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
.claude/: settings.local.json
keycloak/: floodgate-realm.json
scripts/load_mock_waveforms/: .dockerignore  Dockerfile  main.py  requirements.txt
services/compute-service/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/compute-service/app/: config.py  main.py
services/compute-service/app/auth/: __init__.py  dependencies.py  keycloak.py  models.py
services/compute-service/app/middleware/: __init__.py  logging.py
services/compute-service/app/models/: compute.py
services/compute-service/app/routers/: __init__.py  compute.py
services/compute-service/app/storage/: waveform.py
services/metadata-service/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
services/metadata-service/alembic/: env.py
services/metadata-service/alembic/versions/: 001_initial_schema.py  002_seed_data.py
services/metadata-service/app/: config.py  main.py
services/metadata-service/app/auth/: __init__.py  dependencies.py  keycloak.py  models.py
services/metadata-service/app/db/: __init__.py  dependencies.py  engine.py  mock.py  models.py  protocol.py  repository.py
services/metadata-service/app/middleware/: logging.py
services/metadata-service/app/models/: __init__.py  domain.py
services/metadata-service/app/routers/: __init__.py  auth.py  channels.py  events.py  tests.py
services/metadata-service/app/services/: csv_parser.py
services/metadata-service/app/storage/: minio_client.py
services/shared/: fgw.py
services/waveform-service/: .dockerignore  .env.example  Dockerfile  go.mod
src/: App.tsx  index.css
src/api/: computeClient.ts  metadataClient.ts  waveformClient.ts
src/data/: mockData.ts
src/lib/: utils.ts
src/pages/: LandingPage.tsx  TestEventsPage.tsx  WorkspacePage.tsx
src/store/: authStore.ts  workspaceStore.ts
(+21 files in other folders)
