[project]
name = "floodgate-compute"
version = "0.1.0"
description = "FloodGate compute service — FFT, PSD, and signal envelope analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "PyJWT[crypto]>=2.10",
    "cryptography>=43",
    "structlog>=24",
    "minio>=7.2,<8",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "mypy>=1.13",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI Depends() in argument defaults is intentional
ignore = ["B008"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
